Fri Apr 10 10:35:35 1998  John Metzler  <jmetzler@cygnus.com>

	*  mips-tdep.c (unpack_mips16): Fixed instruction decoding, lots of
 	bit pattern interpretations. mips_fetch_instruction does not work
 	for 16 bit instructions. Some confusion remains about sign
 	extension in backward branches.
	(mips32_relative_offset): Sign extension
	(mips32_next_pc): Major debugging, bit pattern interpretation
	(print_unpack): debugging printf
	(fetch_mips_16): new funtion, key on PC low bit, not symbol table
	(mips16_next_16): Initial major debugging of this function. Lots
 	of bit pattern mistakes.
	(mips_next_pc): key on low bit of PC, not symbol table.
	* symfile.c(generic_load) : Added a download verification which
 	reads back the loade code. Download chunk size is now a defined
 	macro. Fixed a bug in which downloading slips into loading one
 	byte at a time. Lower level functions in monitor.c can load long
 	sequences of bytes and make use of these fixups.  Referencing
 	bfd-start_address directly was incorrectly getting zero for start.

Thu Apr  9 19:20:32 1998  Ian Lance Taylor  <ian@cygnus.com>

	* mips-tdep.c (do_fp_register_row): Use alloca rather than arrays
	with dynamic size.

Wed Apr  8 19:21:42 1998  Jason Molenda  (crash@bugshack.cygnus.com)

	* top.c (print_gdb_version): Print 1998 now.

Wed Apr  8 16:57:22 1998  Philippe De Muyter  <phdm@macqel.be>

	* source.c: Remove obsolete decl of strstr().

Wed Apr  8 16:47:33 1998  Jason Molenda  (crash@bugshack.cygnus.com)

	* solib.c (solib_create_inferior_hook): Remove Ulrich Drepper's
	patch of March 23 1998.
	* breakpoint.c (breakpoint_re_set_one): Remove Ulrich Drepper's
	patch of March 23 1998.

Sat Apr  4 10:05:00 1998  Dawn Perchik  <dawn@cygnus.com>

	* mdebugread.c (parse_partial_symbols): If this is an .mdebug 
	section in an ELF file, override a symbol's ECOFF section with its 
	ELF section.  Also, fix stabs continuation where a stabs string 
	continues for more than one continuation.
